# OCTReader

./: CMakeLists.txt  qSlicerOCTReaderModule.cxx  qSlicerOCTReaderModule.h  qSlicerOCTReaderModuleWidget.cxx  qSlicerOCTReaderModuleWidget.h
Logic/: CMakeLists.txt  vtkSlicerOCTReaderLogic.cxx  vtkSlicerOCTReaderLogic.h
Resources/: qSlicerOCTReaderModule.qrc
Resources/UI/: qSlicerOCTReaderModule.ui
